Swaggo implementation in boilerplate
