# validator/General.go
@@ -1,0 +1,5 @@
+package validator
+
+func General(data interface{}, rules map[string]string) (messages []string) {
+  return
+}
